handling registry entries

--- a/App/AppInfo/Launcher/360BrowserPortable.ini
+++ b/App/AppInfo/Launcher/360BrowserPortable.ini
@@ -1,3 +1,19 @@
 [Launch]
 ProgramExecutable=360Browser\360browser.exe
 DirectoryMoveOK=yes
+
+[Activate]
+Registry=true
+
+[RegistryKeys]
+360=HKCU\Software\360Browser
+
+[RegistryCleanupIfEmpty]
+1=HKCU\Software\360Browser\Browser\Statistics
+2=HKCU\Software\360Browser\Browser
+3=HKCU\Software\360Browser\Homepage\Default
+4=HKCU\Software\360Browser\Homepage
+5=HKCU\Software\360Browser\Update
+
+[DirectoriesMove]
+360Browser=%PAL:AppDir%\360Browser\360Browser
